--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="./tbao/index.html" target="_blank">淘宝轮播图</a>
             </li>
             <li>
-                <a href="hotpg.html">hover图片显示大图</a>
+                <a href="hotpg.html" target="_blank">hover图片显示大图</a>
             </li>
             <li>
                 <a href="./js/changeBig.html" target="_blank">仿淘宝-hover图片局部放大</a>
